Sculpt Mode: Scene Statistics (Overlay) not working #111821

Closed
opened 2023-09-02 06:08:34 +02:00 by TheRedWaxPolice · 3 comments

System Information
Operating system: Win 10

Blender Version
Broken: blender-4.0.0-alpha+main.de09bdb510a0-windows.amd64-release
Worked: recent builds
Caused by 6e20beba22

Short description of error
Overlay Scene Statistics in sculpt mode (Vertices/Faces etc) are not working. The number of Vertices/Faces etc just stays at 0...

Exact steps for others to reproduce the error

  • Launch Blender
  • Enter Sculpt mode
  • Enable Statistics in the Overlays popover
  • As you can see, it only shows 0...

Note that the scene statistics in the status bar is working..

**System Information** Operating system: Win 10 **Blender Version** Broken: blender-4.0.0-alpha+main.de09bdb510a0-windows.amd64-release Worked: recent builds Caused by 6e20beba22 **Short description of error** Overlay Scene Statistics in sculpt mode (Vertices/Faces etc) are not working. The number of Vertices/Faces etc just stays at 0... **Exact steps for others to reproduce the error** * Launch Blender * Enter Sculpt mode * Enable Statistics in the Overlays popover * As you can see, it only shows 0... Note that the scene statistics in the status bar is working.. <video controls="" src="https://media.discordapp.net/attachments/587761956526751784/1147381491479875584/blender_wIqRV0yf7l.mp4"></video>
TheRedWaxPolice added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-02 06:08:35 +02:00
Member

Thanks for the report. I can confirm the regression, bisecting.

Thanks for the report. I can confirm the regression, bisecting.
Member

Caused by 6e20beba22
@Harley ^

Caused by 6e20beba22df4b3b1455240d005c744370e06881 @Harley ^
Pratik Borhade self-assigned this 2023-09-04 07:04:59 +02:00
Member

Found a fix, I'll submit a PR shortly :)

Found a fix, I'll submit a PR shortly :)
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-05 01:01:10 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111821
No description provided.