Fix #111821: Sculpt Mode: Scene Statistics showing wrong results

Caused by 6e20beba22df4b3b1455240d005c744370e06881
When in sculpt mode, total selected objects were not calculated. Due to this
`anysel` was false. To fix this calculate total objects in sculpt mode
(optionally we can calculate total selected objects) and total visible
objects in viewport